--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 /ReplicationPackage - Volatility timing
 /The Robustness of Betting Against Beta - code
 Code/Data/
-Code/Old code
-Code/12_GARCH_volatility.ipynb
+Code/Old code/
